commented out text-rendering property for now. it seems to cause performance issues and only little improvement: http://aestheticallyloyal.com/public/optimize-legibility/

--- a/static/css/redefine.css
+++ b/static/css/redefine.css
@@ -3,7 +3,7 @@
 html {
 	overflow-y:scroll;
 	background:#fff;
-	text-rendering:optimizeLegibility;
+	/*text-rendering:optimizeLegibility;*/
 	/*-webkit-font-smoothing:antialiased;*/
 	-ms-text-size-adjust:100%;
 	-webkit-text-size-adjust:100%;
